test/binCases/config-type/invalid-array/test.opts
--config ./webpack.config.js
--target async-node
